# plainer-code

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  Dockerfile.bak  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ec6db43de91_add_sharing_tables_and_owner_id.py  47a2b360bd07_add_file_views_table.py  a0614739d703_add_is_favorite_to_files_and_folders.py  a74815ba306e_add_anthropic_api_key_to_users.py  b8f3a1c2d4e5_add_app_types_and_instances.py  c1d2e3f4g5h6_add_custom_view_app_type.py  d2e3f4g5h6i7_add_marketplace.py  e967324636b7_initial_schema.py  f3g4h5i6j7k8_add_marketplace_status.py  g4h5i6j7k8l9_expand_marketplace.py  h5i6j7k8l9m0_add_related_source_ids.py  i6j7k8l9m0n1_add_sort_order.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agent/: agent.py  system_prompt.py  tools.py
backend/app/api/: auth.py  chat.py  drive.py  files.py  marketplace.py  router.py  users.py  workspaces.py
backend/app/filestore/: local.py  s3.py
backend/app/models/: __init__.py  app_type.py  chat.py  file.py  folder.py  invitation.py  marketplace.py  sharing.py  user.py  view.py  workspace.py
backend/app/schemas/: chat.py  file.py  marketplace.py  user.py  workspace.py
backend/app/services/: auth_service.py  chat_service.py  file_service.py  marketplace_service.py  view_templates.py  workspace_service.py
backend/app/storage/: base.py  local.py  s3.py
backend/app/websocket/: manager.py
frontend/: index.html  (+2 more)
(+53 files in other folders)
